--- a/.github/workflows/running-tests.yml
+++ b/.github/workflows/running-tests.yml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   check:
-    name: Foundry project
+    name: Running tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
